--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,15 @@
-title: Your awesome title
-author: GitHub User
+title: My Blog
+author: Daniel Valdez Montalvan
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my blog! here you will find awesome content from the web development world:
+  tutorials, JavaScript Projects, React JS Projects, CSS3, Responsive Web Design,
+  the latest from programming languages and more!
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
 github_username:  your-github-handle # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+theme: minima
